# test

./: .gitignore  Favicon.hs  README.MD  cabal.project.freeze  cabal.project.local  dblp-kg-docs.cabal  environment.yml  example-1.html  example-2  index-2a.html  index-2a.md  index-2b.html  index-2b.md  index.html  index.md  site.hs  sparql-example.ipynb  sparql-queries.html  sparql-queries.md  sparql-setup.html  sparql-setup.md
.github/workflows/: main.yml
css/: base.css  content.scss  extra.css  footer.scss  header.scss  light.css  navbar.scss  pygmentize.css  style.css  style.scss
templates/: default.html  footer.html  header.html  nav.html
