name:               dblp-kg-docs
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  other-modules:    Favicon
  build-depends:    base == 4.*
                  , filepath
                  , hakyll == 4.16.*
                  , pandoc == 3.1.*
                  , pandoc-types == 1.23.1
                  , process == 1.6.18.0
                  , text == 2.1.1
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010
